@@ -1,3 +1,8 @@
+2008-02-16  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* dwarf2.c (find_line): Don't trust debug information after an
+	unparseable compilation unit.
+
 2008-02-15  Alan Modra  <amodra@bigpond.net.au>
 
 	PR 5765
